--- a/pag2.html
+++ b/pag2.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body bgcolor="pink">
-    <h1>Cavalos bonitos</h1>
-    <h1>Stich perfeito</h1>
-    <a href="pag2.html">Clique aqui</a>
+<body bgcolor="purple">
+    <h1> muito seila</h1>
+    <a href="index.html">Clique aqui</a>
 </body>
-</html> 
+</html>
